# AG26

./: .gitignore  README.md
configs/tracks/: default_track.yaml
gohan/: .gitignore  README.md  pyproject.toml  requirements.txt
gohan/configs/: awsim.yaml  reward.yaml  training.yaml
gohan/scripts/: evaluate_policy.py  plot_telemetry.py  record_telemetry.py  train_ppo.py
gohan/src/gohan/: __init__.py
gohan/src/gohan/control/: __init__.py  action_mapper.py
gohan/src/gohan/envs/: awsim_racing_env.py
gohan/src/gohan/rewards/: __init__.py
gohan/src/gohan/ros/: __init__.py  message_adapters.py  ros2_bridge.py  telemetry_subscriber.py
gohan/src/gohan/telemetry/: features.py  logger.py  metrics.py  telemetry_state.py
gohan/src/gohan/track/: __init__.py  racing_line.py  track_map.py
gohan/src/gohan/training/: __init__.py  callbacks.py  sb3_factory.py
gohan/src/gohan/utils/: math_utils.py  timing.py
gohan/tests/: test_config_no_pairsim.py  test_features.py  test_reward_function.py
scripts/: _bootstrap.py  check_awsim_env.py  drive_manual_test.py  inspect_ros_topics.py  run_inference_controller.py
src/gohan/analysis/: __init__.py  episode_report.py  plots.py
src/gohan/control/: emergency_logic.py  safety_filter.py
src/gohan/envs/: __init__.py
src/gohan/rewards/: reward_function.py
src/gohan/ros/: command_publisher.py  topic_discovery.py
src/gohan/telemetry/: __init__.py  lap_buffer.py  normalizer.py
tests/: test_action_mapper.py  test_config_no_stale_simulator.py  test_geometry.py  test_safety_filter.py
tracks/: default_track.yaml
(+6 files in other folders)
